--- a/scss/hui/_globals.scss
+++ b/scss/hui/_globals.scss
@@ -30,64 +30,50 @@ $aspect-ratios: (
   '1x1': 100%,
   '4x3': calc(3 / 4 * 100%),
   '16x9': calc(9 / 16 * 100%),
-  '21x9': calc(9 / 21 * 100%)
-);
+  '21x9': calc(9 / 21 * 100%)) !default;
 
 $position-values: (
   0: 0,
   50: 50%,
-  100: 100%
-);
+  100: 100%) !default;
 
 //============================================================
 // Fonts
 //============================================================
 // prettier-ignore
-$SansStack: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$SansStack: -apple-system,
+  blinkmacsystemfont,
+  "Segoe UI",
+  roboto,
+  helvetica,
+  arial,
+  sans-serif,
+  "Apple Color Emoji",
+  "Segoe UI Emoji",
+  "Segoe UI Symbol";
 
 // prettier-ignore
-$MonoStack: sfmono-regular, menlo, monaco, consolas, "Andale Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
+$MonoStack: sfmono-regular,
+  menlo,
+  monaco,
+  consolas,
+  "Andale Mono",
+  "Ubuntu Mono",
+  "Liberation Mono",
+  "Courier New",
+  monospace;
 
 // prettier-ignore
-$SerifStack: "Iowan Old Style", "Apple Garamond", baskerville, "Times New Roman", "Droid Serif", times, "Source Serif Pro", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$SerifStack: "Iowan Old Style",
+  "Apple Garamond",
+  baskerville,
+  "Times New Roman",
+  "Droid Serif",
+  times,
+  "Source Serif Pro",
+  serif,
+  "Apple Color Emoji",
+  "Segoe UI Emoji",
+  "Segoe UI Symbol";
 
-$not-integer-txt: ' value breaks vertical rhythm. Use an integer (whole number) for $lines.';
-
-//============================================================
-// UI Requires
-//============================================================
-
-// Z-index master list
-//
-// Warning: Avoid customizing these values. They're used for a bird's eye view
-// of components dependent on the z-axis and are designed to all work together.
-
-// scss-docs-start zindex-stack
-$zindex-0: 1;
-$zindex-1: 100;
-$zindex-2: 200;
-$zindex-3: 300;
-$zindex-4: 400;
-$zindex-dropdown: 1000;
-$zindex-sticky: 1020;
-$zindex-fixed: 1030;
-$zindex-offcanvas-backdrop: 1040;
-$zindex-offcanvas: 1045;
-$zindex-modal-backdrop: 1050;
-$zindex-modal: 1055;
-$zindex-navbar: 600;
-$zindex-popover: 1070;
-$zindex-toast: 1090;
-$zindex-tooltip: 1080;
-$zindex-sticky: 900;
-// scss-docs-end zindex-stack
-
-// scss-docs-start zindex-levels-map
-$zindex-levels: (
-  n1: -1,
-  0: 0,
-  1: 1,
-  2: 2,
-  3: 3
-);
-// scss-docs-end zindex-levels-map
+$not-integer-txt: ' value breaks vertical rhythm. Use an integer (whole number) for $lines.' !default;
